--- a/local.html
+++ b/local.html
@@ -20,7 +20,7 @@
         <script id="body" type="text/template">
             {{> navigation}}
             {{> header}}
-            {{> map}}
+            <script src="https://embed.github.com/view/geojson/billmills/resbaz-site/gh-pages/sites/melbourne.geojson"></script>
         </script>
 
         <script type='text/javascript'>
