--- a/local.html
+++ b/local.html
@@ -20,11 +20,11 @@
         <script id="body" type="text/template">
             {{> navigation}}
             {{> header}}
-            <script src="https://embed.github.com/view/geojson/billmills/resbaz-site/gh-pages/sites/melbourne.geojson"></script>
+            <div id='maptarget' class='container'></div>
         </script>
 
         <script type='text/javascript'>
-            layout = new ultralight(['navigation','header', 'map'], fetchData)
+            layout = new ultralight(['navigation','header', 'map'], fetchData, injectMap)
             layout.fetchTemplates()
         </script>
     </head>
