Updated email and twitter links

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <p>If you want the Research Bazaar to come to your town in 2016, get in touch.</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
+                    <a href="https://github.com/resbaz/cookbook/wiki" class="btn btn-lg btn-outline">
                         <i class="fa fa-map-marker"></i> Host the Research Bazaar
                     </a>
                 </div>
@@ -140,10 +140,10 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="col-lg-8 col-lg-offset-2 text-center contact-buttons">
-                        <a href="#" class="btn btn-lg btn-outline">
+                        <a href="mailto:research.bazaar@gmail.com" class="btn btn-lg btn-outline">
                             <i class="fa fa-envelope"></i> Email
                         </a>
-                        <a href="https://twitter.com/resplat" class="btn btn-lg btn-outline">
+                        <a href="https://twitter.com/resbaz" class="btn btn-lg btn-outline">
                             <i class="fa fa-twitter"></i> Twitter
                         </a>
                     </div>                    
@@ -159,7 +159,7 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Code of Conduct</h3>
-                        <p>All Research Bazaar events respect our <a>Code of Conduct</a>.</p>
+                        <p>All Research Bazaar events respect our <a> href="http://melbourne.resbaz.edu.au/post/103597415589/research-bazaar-policies-and-code-of-conduct">Code of Conduct</a>.</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
@@ -171,7 +171,7 @@
                                 <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
+                                <a href="https://twitter.com/ResBaz" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
                             </li>
                         </ul>
                     </div>
